# rust-aws-ddns

./: .gitignore  Cargo.toml  Cross.toml  README.md  cross-build.sh  cross-compile.md
.github/workflows/: main.yml
docker/: Dockerfile-armhf  build-container-armhf.sh
src/: aws_credentials.rs  config.rs  ip_address.rs  main.rs  route53_client.rs
