[package]
name = "rust-aws-ddns"
version = "0.1.0"
authors = ["Alessandro Menezes <alessandroasm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
csv = "1.1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }

rusoto_core = "0.44.0"
rusoto_route53 = "0.44.0"
